deploy/aks/review-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-alert-review-web
spec:
  selector:
    app: sre-alert-review-web
  ports:
    - name: http
      port: 8088
      targetPort: http
  type: ClusterIP
